@@ -1,18 +1,22 @@
-.Defunct <- function() {
+.Defunct <- function(new, package=NULL) {
     stop(paste(sQuote(as.character(sys.call(sys.parent())[[1]])),
 	       " is defunct.\n",
-	       "See ?Defunct.",
+               if (!missing(new))
+               paste("Use", sQuote(new), "instead.\n"),
+	       "See help(\"Defunct\")",
+               if(!is.null(package))
+               paste(" and help(\"", package, "-defunct\").", sep=""),
 	       sep = ""),
          call. = FALSE)
 }
 
-Version <- function() .Defunct()
+Version <- function() .Defunct("R.Version")
 provide <- function(package) .Defunct()
 
 ## <entry>
 ## Deprecated in 1.2.0
 ## Defunct in 1.3.0
-getenv <- function(...) .Defunct()
+getenv <- function(...) .Defunct("Sys.getenv")
 ## </entry>
 
 ## <entry>
@@ -26,34 +30,34 @@ getenv <- function(...) .Defunct()
 ## <entry>
 ## Deprecated in 1.3.0
 ## Defunct in 1.4.0
-read.table.url <- function(...) .Defunct()
-scan.url <- function(...) .Defunct()
-source.url <- function(...) .Defunct()
+read.table.url <- function(...) .Defunct("read.table(url())")
+scan.url <- function(...) .Defunct("scan(url())")
+source.url <- function(...) .Defunct("source(url())")
 httpclient <- function(...) .Defunct()
-parse.dcf <- function(...) .Defunct()
+parse.dcf <- function(...) .Defunct("read.dcf")
 ## </entry>
 
 ## <entry>
 ## Deprecated in 1.4.0
 ## Defunct in 1.5.0
 .Alias <- function(...) .Defunct()
-reshapeLong <- function(...) .Defunct()
-reshapeWide <- function(...) .Defunct()
+reshapeLong <- function(...) .Defunct("reshape")
+reshapeWide <- function(...) .Defunct("reshape")
 ## </entry>
 
 ## <entry>
 ## Deprecated in 1.5.0
 ## Defunct in 1.6.0
-piechart <- function(...) .Defunct()
+piechart <- function(...) .Defunct("pie")
 ## </entry>
 
 ## <entry>
 ## Deprecated in 1.6.0
 ## Defunct in 1.7.0
 machine <- function(...) .Defunct()
-Machine <- function(...) .Defunct()
-Platform <- function(...) .Defunct()
-restart <- function(...) .Defunct()
+Machine <- function(...) .Defunct(".Machine")
+Platform <- function(...) .Defunct(".Platform")
+restart <- function(...) .Defunct("try")
 ## </entry>
 
 ## <entry>
@@ -67,21 +71,21 @@ printNoClass <- function(...) .Defunct()
 ## Defunct in 1.9.0
 print.coefmat <- function(...) .Defunct()
 codes <- function(x, ...) .Defunct()
-codes.factor <- function(x, ...) .Defunct()
-codes.ordered <- function(x, ...) .Defunct()
+codes.factor <- function(x, ...) .Defunct("unclass")
+codes.ordered <- function(x, ...) .Defunct("unclass")
 "codes<-" <- function(x, ..., value) .Defunct()
 anovalist.lm <- function (...) .Defunct()
-lm.fit.null <- function(...) .Defunct()
-lm.wfit.null <- function(...) .Defunct()
-glm.fit.null <- function(...) .Defunct()
-print.atomic <- function(...) .Defunct()
+lm.fit.null <- function(...) .Defunct("lm.fit")
+lm.wfit.null <- function(...) .Defunct("lm.wfit")
+glm.fit.null <- function(...) .Defunct("glm.fit")
+print.atomic <- function(...) .Defunct("print.default")
 ## </entry>
 
 ## <entry>
 ## Deprecated in 1.9.0
 ## Defunct in 2.0.0
-La.eigen <- function(...) .Defunct()
-tetragamma <- function(x) .Defunct()
-pentagamma <- function(x) .Defunct()
-package.description <- function(...) .Defunct()
+La.eigen <- function(...) .Defunct("eigen")
+tetragamma <- function(x) .Defunct("psigamma")
+pentagamma <- function(x) .Defunct("psigamma")
+package.description <- function(...) .Defunct("packageDescription")
 ## </entry>
