@@ -14,9 +14,8 @@ X11 <- function(display = "", width = 7, height = 7, pointsize = 12,
 
 x11 <- X11
 
-gnome <- function(display = "", width = 7, height = 7, pointsize = 12) {
-    .Defunct()
-}
+gnome <- function(display = "", width = 7, height = 7, pointsize = 12)
+    .Defunct(package="graphics")
 
 ## no Gnome <- .Alias(gnome)
 GNOME <- gnome
