@@ -111,6 +111,9 @@ NEW FEATURES
     o	ftable.formula() now looks for variables in the environment of
 	the formula before the usual search path.
 
+    o	.Defunct() now has 'new' and 'package' arguments like those of
+	.Deprecated(). 
+
 
 UTILITIES
 
